Fix docs spacing

--- a/css/os.css
+++ b/css/os.css
@@ -246,16 +246,21 @@ span {
 
 #docs {
     justify-content: flex-start;
+    gap: 0.4vh;
 }
 
-#docs h2,
+#docs h2 {
+    margin-bottom: 0.5vh;
+}
+
 #docs p {
-    margin: 0.5vh 0;
+    margin: 0.3vh 0;
 }
 
 .docsSub {
     font-weight: bold;
-    margin-top: 1vh;
+    margin-top: 0.8vh;
+    margin-bottom: 0.2vh;
 }
 
 /* .window:hover {
